Fix triggered menu in responsive renders with scrollbar

--- a/elements/upfront-newnavigation/css/unewnavigation-style.css
+++ b/elements/upfront-newnavigation/css/unewnavigation-style.css
@@ -314,3 +314,10 @@ div.burger_overlay {
   left:0;
 }
 
+
+.triggered-menu li.menu-item .uimage-controls.image-element-controls,
+.triggered-menu .delete_menu_item,
+.triggered-menu .navigation-add-item,
+.triggered-menu li.menu-item .open-item-controls {
+	display: none!important;
+}
